--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "integration"
   ],
   "dependencies": {
-    "newrelic": "^1.40.0"
+    "newrelic": "~5.10.0"
   },
   "devDependencies": {
-    "sails": "~0.11.0",
+    "sails": "~0.12.0",
     "should": "*",
     "mocha": "*"
   },
